[gd_scene load_steps=33 format=3 uid="uid://cw0nh000dvxkk"]

[ext_resource type="Texture2D" uid="uid://ceepyp48rfoas" path="res://Game_Asets/Boss-Sheet.webp" id="1_2mdct"]
[ext_resource type="Script" uid="uid://ckww1cciujee4" path="res://Boss/boss.gd" id="1_7ba5a"]
[ext_resource type="Script" uid="uid://83ecr14pxmg2" path="res://Boss/Boss Attacks/Spray/projectile_spray.gd" id="2_mrrbl"]
[ext_resource type="Script" uid="uid://djeibfyhiwtb2" path="res://Boss/Boss Attacks/Laser/laser_beam.gd" id="3_0sshd"]
[ext_resource type="PackedScene" uid="uid://de8e4k1ajflmy" path="res://Boss/Boss Attacks/Spray/spray_projectile.tscn" id="3_7ba5a"]
[ext_resource type="Script" uid="uid://bteggfjmwn30e" path="res://Boss/Boss Attacks/Wave/wave_emitter.gd" id="4_7ba5a"]
[ext_resource type="PackedScene" uid="uid://coas4vpmfcaqr" path="res://Boss/Boss Attacks/Laser/boss_laser.tscn" id="6_mk3vo"]
[ext_resource type="PackedScene" uid="uid://cbjdi8dhp04vn" path="res://Boss/Boss Attacks/Wave/missile.tscn" id="8_ju3tf"]
[ext_resource type="Texture2D" uid="uid://pj5l5sshtcaj" path="res://Boss/Boss Damage/BossDamage-Sheet.png" id="9_ntee4"]
[ext_resource type="Texture2D" uid="uid://b3nwqym3c38xb" path="res://Explosion-Sheet.png" id="10_sri3m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2mdct"]
radius = 247.025

[sub_resource type="AtlasTexture" id="AtlasTexture_t20dt"]
atlas = ExtResource("1_2mdct")
region = Rect2(0, 0, 195, 183)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cnrr"]
atlas = ExtResource("1_2mdct")
region = Rect2(195, 0, 195, 183)

[sub_resource type="SpriteFrames" id="SpriteFrames_mrrbl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t20dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cnrr")
}],
"loop": true,
"name": &"idel",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mk3vo"]
radius = 247.0

[sub_resource type="AtlasTexture" id="AtlasTexture_sri3m"]
atlas = ExtResource("9_ntee4")
region = Rect2(0, 0, 175, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j6g7"]
atlas = ExtResource("9_ntee4")
region = Rect2(175, 0, 175, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_myhfd"]
atlas = ExtResource("9_ntee4")
region = Rect2(350, 0, 175, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjlxr"]
atlas = ExtResource("9_ntee4")
region = Rect2(0, 148, 175, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_klplh"]
atlas = ExtResource("9_ntee4")
region = Rect2(175, 148, 175, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5hgr"]
atlas = ExtResource("9_ntee4")
region = Rect2(350, 148, 175, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdnl6"]
atlas = ExtResource("9_ntee4")
region = Rect2(0, 296, 175, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_71440"]
atlas = ExtResource("9_ntee4")
region = Rect2(175, 296, 175, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o1ob"]
atlas = ExtResource("9_ntee4")
region = Rect2(350, 296, 175, 148)

[sub_resource type="SpriteFrames" id="SpriteFrames_iht7o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sri3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j6g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myhfd")
}],
"loop": true,
"name": &"level1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjlxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klplh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5hgr")
}],
"loop": true,
"name": &"level2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdnl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71440")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o1ob")
}],
"loop": true,
"name": &"level3",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_iht7o"]
atlas = ExtResource("10_sri3m")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6ame"]
atlas = ExtResource("10_sri3m")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlv3h"]
atlas = ExtResource("10_sri3m")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gg6m4"]
atlas = ExtResource("10_sri3m")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d8y5"]
atlas = ExtResource("10_sri3m")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0623"]
atlas = ExtResource("10_sri3m")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_q4fyr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iht7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6ame")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlv3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gg6m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d8y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0623")
}],
"loop": true,
"name": &"explosion",
"speed": 5.0
}]

[node name="Boss" type="CharacterBody2D" node_paths=PackedStringArray("damaged_anim", "explosions", "explosions_parent", "death_timer")]
texture_filter = 1
script = ExtResource("1_7ba5a")
damaged_anim = NodePath("Damaged")
explosions = [NodePath("Explosions/Explosion"), NodePath("Explosions/Explosion2"), NodePath("Explosions/Explosion3"), NodePath("Explosions/Explosion4"), NodePath("Explosions/Explosion5")]
explosions_parent = NodePath("Explosions")
death_timer = NodePath("DeathDelay")
final_pos = Vector2(240, 150)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -146)
shape = SubResource("CircleShape2D_2mdct")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -139)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_mrrbl")
animation = &"idel"
autoplay = "idel"
frame_progress = 0.500742

[node name="HitBox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" groups=["enemy"]]
position = Vector2(4, -152)
shape = SubResource("CircleShape2D_mk3vo")

[node name="Projectile Spray" type="Node2D" parent="." node_paths=PackedStringArray("emitters")]
script = ExtResource("2_mrrbl")
emitters = [NodePath("Right Spray Emitter"), NodePath("Left Spray Emitter")]
bullet_spray = ExtResource("3_7ba5a")

[node name="Right Spray Emitter" type="Node2D" parent="Projectile Spray"]
position = Vector2(116, 52)

[node name="Left Spray Emitter" type="Node2D" parent="Projectile Spray"]
position = Vector2(-110, 55)

[node name="Delay" type="Timer" parent="Projectile Spray"]
wait_time = 0.1

[node name="Laser Beam" type="Node2D" parent="." node_paths=PackedStringArray("laser_emitters")]
script = ExtResource("3_0sshd")
laser_emitters = [NodePath("Center Laser Emitter"), NodePath("Right Laser Emitter"), NodePath("Left Laser Emitter")]
laser = ExtResource("6_mk3vo")

[node name="Center Laser Emitter" type="Node2D" parent="Laser Beam"]
position = Vector2(3, 90)

[node name="Right Laser Emitter" type="Node2D" parent="Laser Beam"]
position = Vector2(216, -62)

[node name="Left Laser Emitter" type="Node2D" parent="Laser Beam"]
position = Vector2(-209, -62)

[node name="Delay" type="Timer" parent="Laser Beam"]
wait_time = 2.0

[node name="Wave Emitter" type="Node2D" parent="."]
script = ExtResource("4_7ba5a")
missile = ExtResource("8_ju3tf")

[node name="Delay" type="Timer" parent="Wave Emitter"]
wait_time = 0.25

[node name="DeathDelay" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Damaged" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(2, -107)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_iht7o")
animation = &"level1"
frame_progress = 0.260783

[node name="Explosions" type="Node2D" parent="."]
visible = false
position = Vector2(-234, -174)

[node name="Explosion" type="AnimatedSprite2D" parent="Explosions"]
position = Vector2(135, 180)
sprite_frames = SubResource("SpriteFrames_q4fyr")
animation = &"explosion"
frame_progress = 0.581278

[node name="Explosion2" type="AnimatedSprite2D" parent="Explosions"]
position = Vector2(241, 233)
sprite_frames = SubResource("SpriteFrames_q4fyr")
animation = &"explosion"
frame_progress = 0.127272

[node name="Explosion3" type="AnimatedSprite2D" parent="Explosions"]
position = Vector2(405, 98)
sprite_frames = SubResource("SpriteFrames_q4fyr")
animation = &"explosion"
frame_progress = 0.138754

[node name="Explosion4" type="AnimatedSprite2D" parent="Explosions"]
position = Vector2(280, 135)
sprite_frames = SubResource("SpriteFrames_q4fyr")
animation = &"explosion"
frame_progress = 0.0252187

[node name="Explosion5" type="AnimatedSprite2D" parent="Explosions"]
position = Vector2(72, 75)
sprite_frames = SubResource("SpriteFrames_q4fyr")
animation = &"explosion"
frame_progress = 0.936479

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="Projectile Spray/Delay" to="Projectile Spray" method="_on_delay_timeout"]
[connection signal="timeout" from="Laser Beam/Delay" to="Laser Beam" method="_on_delay_timeout"]
[connection signal="timeout" from="Wave Emitter/Delay" to="Wave Emitter" method="_on_delay_timeout"]
[connection signal="timeout" from="DeathDelay" to="." method="_on_death_delay_timeout"]
